plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.3.1'
    id 'distribution'
}


apply from: 'config.gradle'

group 'com.xiaobaicai.plugin'
version "$rootProject.ext.plugin.version"
sourceCompatibility = 1.8


repositories {
    mavenCentral()
}

dependencies {
    implementation project(":plugin-core")
    implementation rootProject.ext.dependencies["hutool-all"]
    annotationProcessor rootProject.ext.dependencies["lombok"]
    compileOnly rootProject.ext.dependencies["lombok"]
    testAnnotationProcessor rootProject.ext.dependencies["lombok"]
    testCompileOnly rootProject.ext.dependencies["lombok"]
    // 单测
    testCompileOnly rootProject.ext.dependencies["junit"]
    testImplementation rootProject.ext.dependencies["junit.jupiter.api"]
    testImplementation rootProject.ext.dependencies["junit.jupiter.engine"]
}


// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = '2021.1.3'
    plugins = ['java']
    type.set("IU")
    localPath.set("/Applications/IntelliJ IDEA.app")
    tasks {
        "buildSearchableOptions" {
            enabled = false
        }
    }
}

patchPluginXml {
    patchPluginXml {
        sinceBuild.set("211.1")
        untilBuild.set("")
    }
}

publishPlugin {
    token = System.getenv("pluginToken")
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}


test {
    useJUnitPlatform()
}



//所有项目配置
allprojects {
    group 'com.xiaobaicai.plugin'
    version "$rootProject.ext.plugin.version"

    apply plugin: 'idea'
    apply plugin: 'java'
    sourceCompatibility = 1.8
}

//所有子项目的通用配置
subprojects {
    //仓库地址
    repositories {
        mavenLocal()
        mavenCentral()
    }

    //公用依赖
    dependencies {
        // 全局依赖
        implementation rootProject.ext.dependencies["hutool-all"]
        implementation rootProject.ext.dependencies["byte-buddy"]
        implementation rootProject.ext.dependencies["byte-buddy-agent"]
        implementation rootProject.ext.dependencies["slf4j"]
        annotationProcessor rootProject.ext.dependencies["lombok"]
        compileOnly rootProject.ext.dependencies["lombok"]
        testAnnotationProcessor rootProject.ext.dependencies["lombok"]
        testCompileOnly rootProject.ext.dependencies["lombok"]
        // 单测
        testCompileOnly rootProject.ext.dependencies["junit"]
        testImplementation rootProject.ext.dependencies["junit.jupiter.api"]
        testImplementation rootProject.ext.dependencies["junit.jupiter.engine"]
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

task packAllTwice() {
    dependsOn(':plugin-agent:packAgent')
    dependsOn(':assemble')
}


